completed page home

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,13 @@
-// TODO
+.headerContainer {
+  height: 6.5625rem;
+}
+
+.headerContent {
+  max-width: 1120px;
+  height: 6.5625rem;
+  margin: 0 18rem auto;
+  padding: 0 2rem;
+
+  display: flex;
+  align-items: center;
+}
