--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,1 +1,41 @@
-// TODO
+.container {
+  max-width: 1120px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.posts {
+  max-width: 721px;
+  margin: 5rem auto 0;
+
+  a {
+    display: block;
+
+    & + a {
+      margin-top: 2rem;
+      padding-top: 2rem;
+    }
+  }
+
+  strong {
+    display: block;
+    font-size: 1.75rem;
+    font-weight: 700;
+    line-height: 2.125rem;
+  }
+
+  p {
+    margin-top: 0.5rem;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    color: var(--body);
+  }
+}
+
+.info {
+  display: flex;
+  margin-top: 1.5rem;
+  font-size: 1rem;
+  gap: 0.5rem;
+  color: var(--info);
+}
