--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -22,6 +22,11 @@
     font-size: 1.75rem;
     font-weight: 700;
     line-height: 2.125rem;
+    transition: color 0.2s;
+
+    &:hover {
+      color: var(--highlight);
+    }
   }
 
   p {
@@ -29,6 +34,16 @@
     font-size: 1.125rem;
     line-height: 1.375rem;
     color: var(--body);
+  }
+
+  button {
+    border: 0;
+    background: transparent;
+    color: var(--highlight);
+    font-size: 1.125rem;
+    font-weight: 600;
+    line-height: 1.3625rem;
+    margin: 4rem 0 5rem 0;
   }
 }
 
