--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -49,8 +49,21 @@
 
 .info {
   display: flex;
+  align-items: center;
   margin-top: 1.5rem;
   font-size: 1rem;
-  gap: 0.5rem;
+  gap: 1rem;
   color: var(--info);
+
+  .time {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
+
+  .user {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
 }
