chore: completed page home

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -7,6 +7,7 @@
 .posts {
   max-width: 721px;
   margin: 5rem auto 0;
+  margin-bottom: 5rem;
 
   a {
     display: block;
@@ -43,7 +44,7 @@
     font-size: 1.125rem;
     font-weight: 600;
     line-height: 1.3625rem;
-    margin: 4rem 0 5rem 0;
+    margin: 4rem 0 0 0;
   }
 }
 
