feat: created style page post

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,8 +1,4 @@
-.posts {
-  max-width: 721px;
-  margin: 5rem auto 0;
-  margin-bottom: 5rem;
-
+.link {
   a {
     display: block;
 
@@ -30,35 +26,25 @@
     line-height: 1.375rem;
     color: var(--body);
   }
+}
 
-  button {
-    border: 0;
-    background: transparent;
-    color: var(--highlight);
-    font-size: 1.125rem;
-    font-weight: 600;
-    line-height: 1.3625rem;
-    margin: 4rem 0 0 0;
-  }
+.info {
+  display: flex;
+  align-items: center;
+  margin-top: 1.5rem;
+  font-size: 1rem;
+  gap: 1rem;
+  color: var(--info);
 
-  .info {
+  .time {
     display: flex;
     align-items: center;
-    margin-top: 1.5rem;
-    font-size: 1rem;
-    gap: 1rem;
-    color: var(--info);
+    gap: 0.5rem;
+  }
 
-    .time {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .user {
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
+  .user {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
   }
 }
