--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -3,8 +3,11 @@
     display: block;
 
     & + a {
+      display: block;
+
       margin-top: 2rem;
       padding-top: 2rem;
+      margin-bottom: 2rem;
     }
   }
 
@@ -32,6 +35,7 @@
   display: flex;
   align-items: center;
   margin-top: 1.5rem;
+  margin-bottom: 4rem;
   font-size: 1rem;
   gap: 1rem;
   color: var(--info);
